<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <com.google.android.material.card.MaterialCardView
        android:id="@+id/card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        app:cardElevation="15dp"
        app:cardCornerRadius="20dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <!-- Media -->
            <ImageView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/image_food"
                android:src="@drawable/burger_item"
                android:scaleType="fitCenter"
                android:adjustViewBounds="true"
                android:contentDescription="halo"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_below="@id/image_food"
                android:id="@+id/deskripsi_food"
                android:padding="16dp">

                <!-- Title, secondary and supporting text -->
                <TextView
                    android:layout_gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/menu_list_item"
                    android:textSize="25dp"
                    android:id="@+id/name_food"
                    android:textStyle="bold"
                    android:textAppearance="?attr/textAppearanceHeadline6"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:textSize="20dp"
                    android:id="@+id/food_deskripsi"
                    android:text="@string/deskripsi_food"
                    android:textAppearance="?attr/textAppearanceBody2"
                    android:textColor="?android:attr/textColorSecondary"
                    />
                <TextView
                    android:layout_gravity="right"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/deskripsi_harga"
                    android:id="@+id/harga_food"
                    android:textAppearance="?attr/textAppearanceBody2"
                    android:textColor="@color/orange"
                    android:textSize="25dp"
                    />

            </LinearLayout>

            <!-- Buttons -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:orientation="horizontal"
                android:gravity="center"
                android:layout_below="@+id/deskripsi_food"
                >

                <ImageButton
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_marginEnd="150dp"

                    android:background="@drawable/roundedyellow"
                    android:scaleType="fitCenter"
                    android:src="@drawable/baseline_edit_24"

                    />

                <ImageButton
                    android:layout_marginLeft="50dp"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:src="@drawable/baseline_delete_24"
                    android:background="@drawable/round_button"
                    android:scaleType="fitCenter"
                    style=""
                    />
            </LinearLayout>

        </RelativeLayout>

    </com.google.android.material.card.MaterialCardView>
</LinearLayout>