<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_gravity="center"
    tools:context=".fragment.PemesenanFragment">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView

            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_margin="150dp"
            app:cardCornerRadius="30dp"
            app:cardElevation="15dp">

            <LinearLayout
                android:id="@+id/cardForm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/judulPemesanan"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_extrabold"
                    android:text="Ordering Customer"
                    android:textAlignment="center"
                    android:textSize="36sp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="0dp"

                    android:gravity="right"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/buttonadd"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="8dp"
                        android:text="@string/addButton"

                        />

                    <Button
                        android:id="@+id/buttondelete"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:backgroundTint="#F44336"

                        android:text="@string/deleteButton" />
                </LinearLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="150dp"
                    android:layout_marginEnd="100dp"
                    android:hint="@string/selectmeja"
                    app:layout_constraintTop_toBottomOf="@+id/judulPemesanan"
                    app:startIconDrawable="@drawable/baseline_table_restaurant_24">

                    <AutoCompleteTextView
                        android:id="@+id/autoComplete_meja"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="none" />

                </com.google.android.material.textfield.TextInputLayout>

                <!--        <com.google.android.material.textfield.TextInputLayout-->
                <!--            android:layout_width="match_parent"-->
                <!--            android:layout_height="wrap_content"-->
                <!--            android:layout_marginTop="25dp"-->
                <!--            android:layout_marginEnd="100dp"-->
                <!--            android:layout_marginStart="150dp"-->
                <!--            android:hint="@string/select"-->
                <!--            app:startIconDrawable="@drawable/baseline_fastfood_24"-->
                <!--            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"-->
                <!--            >-->
                <!--            <AutoCompleteTextView-->
                <!--                android:layout_width="match_parent"-->
                <!--                android:layout_height="wrap_content"-->
                <!--                android:id="@+id/autoComplete_item"-->
                <!--                android:inputType="none"/>-->
                <!--        </com.google.android.material.textfield.TextInputLayout>-->

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="150dp"
                    android:layout_marginTop="25dp"
                    android:layout_marginEnd="100dp"
                    android:hint="@string/select"
                    android:visibility="gone"
                    app:startIconDrawable="@drawable/baseline_fastfood_24">

                    <AutoCompleteTextView
                        android:id="@+id/autoComplete_plus"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="none" />
                </com.google.android.material.textfield.TextInputLayout>

                <ScrollView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"

                    >

                    <LinearLayout
                        android:id="@+id/container"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginStart="137dp"
                        android:layout_marginTop="20dp"
                        android:layout_marginEnd="112dp"
                        android:orientation="vertical">
                        <!--                android:background="@color/black"-->


                    </LinearLayout>

                </ScrollView>
            </LinearLayout>


        </androidx.cardview.widget.CardView>


    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="500dp"
        android:layout_marginEnd="500dp"
        android:layout_marginBottom="50dp"
        android:layout_gravity="bottom">
    <Button
        android:id="@+id/buttonSubmit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center"
        android:backgroundTint="@color/colorPrimary"
        android:text="Done" />
    </LinearLayout>
</FrameLayout>